# MTSC

./: .gitignore  CMakeLists.txt  env.h  main.cpp  mtsc_py.cpp
include/: convertpycpp.h  matelem.h  mesh.h  mstC_types.h  tri_vf.h
matelem/: CMakeLists.txt  matelem.cpp
mesh/: CMakeLists.txt  mesh.cpp  tri_vf.cpp
mtsc_python/: __init__.py
mtsc_python/cataelem/: utilities.py
mtsc_python/cataelem/database/: elem.json
mtsc_python/material/: material.py
mtsc_python/mesh/database/: gmshdb.json
mtsc_python/model/: utilities.py
mtsc_python/mtsc_python/mesh/: utilities.py
mtsc_python/mtsc_python/model/: model.py
mtsc_python/mtsc_python/model/database/: fpg.json
tests/: test0001.py  test0002.py
